# slider

./: AUTHORS  BUGS  COPYING  ChangeLog  HACKING  INSTALL  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  TRANSLATORS  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  design.glade  design.gladep  sound-studio.glade  sound-studio.gladep
debian/: changelog  control  copyright  docs  install  manpages  menu  rules  slider.1  slider.desktop  slider.doc-base.EX
devcpp/: config.h  config.h.in  slider.dev  slider_private.h  slider_private.rc  sndstud.dev  sndstud_private.h  sndstud_private.rc
docs/: Makefile.am  Makefile.in  help.txt
docs/reference/: Doxyfile  Makefile.am  Makefile.in  abbrevs.txt
docs/research/: Makefile.am  Makefile.in  wave.tex
m4macros/: binreloc.m4
msvc/: config.h  config.h.in  slider.dsp  slider.dsw  slider.exe.config  slider.manifest  slider.sln  slider.vcproj  sndstud.dsp  sndstud.dsw  sndstud.exe.config  sndstud.manifest  sndstud.sln  sndstud.vcproj
old-plans/: Readme.txt
packaging/: 2.12.10-dist.txt  Directory.idt.cat  Icon.idt  Makefile.am  Makefile.in  Property.idt.in  README  RemoveFile.idt.in  Shortcut.idt.in  english.nsh  features.txt  installer.nsi  license.rtf  sndstud.nsi  spanish.nsh  uuids.txt
pixmaps/: Thumbs.db
po/: ChangeLog  Makefile.in.in  POTFILES.in  README.translators  es.gmo  es.po  slider.pot  sndstud.pot
src/: .gdbinit  Makefile.am  Makefile.in  app.rc  audio.c  audio.h  binreloc.c  binreloc.h  callbacks.c  callbacks.h  doxygen.h  exparray.gdb  file_business.c  file_business.h  gawrapper.h  interface.c  interface.h  main.c  sndstud.rc  support.c  support.h  wv_editors.c  wv_editors.h
svgs/: README
